# wc3remake

./: CMakeLists.txt  README.md
doc/: PROG_OPCOD.md
resources/: config.ini
src/commons/: GraphicsSettings.cpp  GraphicsSettings.h  IFFSaxLexer.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  XtreDecompressor.cpp  XtreDecompressor.h
src/engine/: CMakeLists.txt  Camera.h  FrameBuffer.cpp  GLBatch.cpp  GLBatch.h  GLExtensions.h  GameEngine.cpp  GameEngine.h  InputActionSystem.cpp  Loader.cpp  RSMixer.cpp  RSMixer.h  RSScreen.cpp  RSScreen.h  RSVGA.cpp  RSVGA.h  SCMouse.cpp  SCRenderer.cpp  SCRenderer.h  Texture.cpp  keyboard.cpp  keyboard.h  precomp.h
src/executables/config/: CMakeLists.txt
src/executables/debugger/: CMakeLists.txt  DebugControlMapping.cpp  DebugObjectViewer.cpp
src/executables/sc/: CMakeLists.txt
src/executables/vrstrike/: VRScreen.cpp
src/executables/wc3/: CMakeLists.txt  main.cpp
src/executables/wc4/: CMakeLists.txt  main.cpp
src/realspace/: AssetManager.cpp  AssetManager.h  RLEShape.cpp  RLEShape.h  RSCockpit.cpp  RSCockpit.h  RSEntity.cpp  RSEntity.h  RSImageSet.cpp  RSMission.cpp  RSMission.h  RSProf.cpp  RSProf.h  RSWC3Shape.cpp  RSWC3Shape.h  RSWorld.cpp  RSWorld.h  XtreArchive.cpp  XtreArchive.h
src/strike_commander/: CMakeLists.txt  SCCockpit.cpp  SCCockpit.h  SCDebris.cpp  SCDebris.h  SCExplosion.cpp  SCExplosion.h  SCJdynPlane.cpp  SCJdynPlane.h  SCMission.cpp  SCMission.h  SCMissionActors.cpp  SCMissionActors.h  SCNavMap.cpp  SCNavMap.h  SCPilot.cpp  SCPlane.cpp  SCPlane.h  SCProg.cpp  SCProg.h  SCSimulatedObject.cpp  SCSmokeSet.cpp  SCStrike.cpp  SCStrike.h  SCenums.h  precomp.h
src/wing_commander_3/: .WC3Scene.cpp.swp  CMakeLists.txt  WC3BranchPak.cpp  WC3BranchPak.h  WC3Font.cpp  WC3Font.h  WC3GameFlow.cpp  WC3GameFlow.h  WC3Globals.cpp  WC3Globals.h  WC3LoadoutData.cpp  WC3LoadoutData.h  WC3MVEPlayer.cpp  WC3MVEPlayer.h  WC3MVEStream.cpp  WC3MVEStream.h  WC3MainMenu.cpp  WC3MainMenu.h  WC3Mission.cpp  WC3Mission.h  WC3MusicPak.cpp  WC3MusicPak.h  WC3NavMap.cpp  WC3NavMap.h  WC3Options.h  WC3OptionsActivity.cpp  WC3OptionsActivity.h  WC3QuitConfirmActivity.cpp  WC3QuitConfirmActivity.h  WC3SamplePak.cpp  WC3SamplePak.h  WC3SaveGame.cpp  WC3SaveGame.h  WC3Scene.cpp  WC3Scene.h  WC3Strike.cpp  WC3Strike.h
src/wing_commander_4/: .WC3Scene.cpp.swp  .WC4GameFlow.cpp.swp  CMakeLists.txt  WC4BranchPak.cpp  WC4BranchPak.h  WC4Font.cpp  WC4Font.h  WC4GameFlow.cpp  WC4GameFlow.h  WC4Globals.cpp  WC4Globals.h  WC4MVEPlayer.cpp  WC4MVEPlayer.h  WC4MainMenu.cpp  WC4MainMenu.h  WC4Mission.cpp  WC4Mission.h  WC4Scene.cpp  WC4Scene.h  WC4Strike.cpp  WC4Strike.h
tests/: CMakeLists.txt
